--- a/WS.MPU - copia/WS.MPU/Log4net.config
+++ b/WS.MPU - copia/WS.MPU/Log4net.config
@@ -1,24 +1,16 @@
-﻿<configuration>
-  <configSections>
-    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
-  </configSections>
-  <log4net debug="false" update="Overwrite">
-    <appender name="Default" type="log4net.Appender.RollingFileAppender">
-		<file value="C:\Logs\MPUBackend\Log.txt" />
-      <appendToFile value="true" />
-      <maxSizeRollBackups value="10" />
-      <maximumFileSize value="1MB" />
-      <rollingStyle value="Size" />
-      <staticLogFileName value="true" />
-      <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="Iniciolog4net- %date - %X{sessionid} - %thread - %-5level - %logger - %message %newline" />
-      </layout>
-    </appender>
-    <root>
-      <level value="DEBUG" />
-      <appender-ref ref="Default" />
-    </root>
-  </log4net>
-	
-</configuration>
-
+﻿<?xml version="1.0" encoding="utf-8" ?>
+<log4net>
+	<root>
+		<level value="DEBUG" />
+		<appender-ref ref="RollingFile" />
+	</root>
+	<appender name="RollingFile" type="log4net.Appender.RollingFileAppender">
+		<file value="Logs/MPUHB.log" />
+		<appendToFile value="true" />
+		<rollingStyle value="Date" />
+		<datePattern value="yyyyMMdd" />
+		<layout type="log4net.Layout.PatternLayout">
+			<conversionPattern value="[%date] %-5level %logger - %message%newline" />
+		</layout>
+	</appender>
+</log4net>
