--- a/WS.MPU - copia/WS.MPU/WS.MPUHB.csproj
+++ b/WS.MPU - copia/WS.MPU/WS.MPUHB.csproj
@@ -60,9 +60,9 @@
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Web" />
+    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Web.Services" />
@@ -71,17 +71,16 @@
     <Reference Include="System.Xml.Serialization" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="GestionarMPU.asmx" />
+    <Content Include="GestionarMPUHB.asmx" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AdministradorDeLog.cs" />
-    <Compile Include="GestionarMPU.asmx.cs">
-      <DependentUpon>GestionarMPU.asmx</DependentUpon>
+    <Compile Include="GestionarMPUHB.asmx.cs">
+      <DependentUpon>GestionarMPUHB.asmx</DependentUpon>
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ServicioBase.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Log4net.config" />
@@ -97,13 +96,13 @@
     <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\WS.MPU.Datos\WS.MPU.Datos.csproj">
+    <ProjectReference Include="..\WS.MPU.Datos\WS.MPUHB.Datos.csproj">
       <Project>{bdc9ddae-f389-4cf7-93bb-e81f6e72f767}</Project>
-      <Name>WS.MPU.Datos</Name>
+      <Name>WS.MPUHB.Datos</Name>
     </ProjectReference>
-    <ProjectReference Include="..\WS.MPU.Negocio\WS.MPU.Negocio.csproj">
+    <ProjectReference Include="..\WS.MPU.Negocio\WS.MPUHB.Negocio.csproj">
       <Project>{e04e6232-51df-4743-a598-a62f1cb0916c}</Project>
-      <Name>WS.MPU.Negocio</Name>
+      <Name>WS.MPUHB.Negocio</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
