--- a/WS.MPU - copia/WS.MPU/bin/WS.MPU.GestionarMPU.dll.config
+++ b/WS.MPU - copia/WS.MPU/bin/WS.MPU.GestionarMPU.dll.config
@@ -1,49 +1,76 @@
-﻿<?xml version="1.0"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  <appSettings>
-    <!--UBICACION DEL ARCHIVO DE CONFIGURACION DEL LOG4NET -->
-    <add key="Config.Log4Net" value="Log4net.Config"/>
-    <add key="SchemaDB2" value="A2000"/>
-	  <add key="EnviarMail.EnviarMail" value="http://labprueba3.anses.gov.ar:8080/checkmail/enviarmail.asmx"/>
-  </appSettings>
-  <system.serviceModel>
-    <bindings>
-      <webHttpBinding>
-        <binding maxBufferSize="2147483647" maxReceivedMessageSize="2147483647"/>
-      </webHttpBinding>
-    </bindings>
-  </system.serviceModel>
-  <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/>
-  </startup>
-  <connectionStrings>
-	  <add name="MPUDB2" connectionString="Database=SEGSOC_D;User ID=k000010;Password=24aMrDE5;Server=db2connectdesa:50000;CurrentSchema=A2000;Persist Security Info=True" providerName="IBM.Data.DB2" />
-  </connectionStrings>
-  <!--
-    Para obtener una descripción de los cambios de web.config, vea http://go.microsoft.com/fwlink/?LinkId=235367.
+	<!-- Indicar la sección de log4net -->
+	<configSections>
+		<section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
+	</configSections>
 
-    Los siguientes atributos se pueden establecer en la etiqueta <httpRuntime>.
-      <system.Web>
-        <httpRuntime targetFramework="4.5" />
-      </system.Web>
-  -->
-  <system.web>
-    <compilation debug="true" targetFramework="4.5"/>
-    <httpRuntime targetFramework="4.5"/>
-  </system.web>
-  <runtime>
-    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-      <dependentAssembly>
-        <assemblyIdentity name="IBM.Data.DB2" publicKeyToken="7C307B91AA13D208" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-9.7.4.4" newVersion="9.7.4.4"/>
-        <assemblyIdentity name="Microsoft.Web.Infrastructure" publicKeyToken="31bf3856ad364e35" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-2.0.1.0" newVersion="2.0.1.0"/>
-      </dependentAssembly>
-    </assemblyBinding>
-  </runtime>
-  <system.codedom>
-    <compilers>
-      <compiler extension=".cs" language="c#;cs;csharp" warningLevel="4" compilerOptions="/langversion:7.3 /nowarn:1659;1699;1701;612;618" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=3.6.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"/>
-    </compilers>
-  </system.codedom>
+	<appSettings>
+		<!-- Ubicación del archivo de configuración de log4net -->
+		<add key="Config.Log4Net" value="log4net.Config.xml" />
+		<!-- Esquema de la base DB2 -->
+		<add key="SchemaDB2" value="A2000" />
+		<!-- (Opcional) URL de envío de mail si lo necesitás -->
+		<add key="EnviarMail.EnviarMail" value="http://labprueba3.anses.gov.ar:8080/checkmail/enviarmail.asmx" />
+	</appSettings>
+
+	<!-- Configuración de log4net -->
+	<log4net configSource="log4net.Config.xml" />
+
+	<connectionStrings>
+		<!-- Cadena de conexión renombrada para el nuevo servicio -->
+		<add name="MPUHBDB2"
+			 connectionString="Database=SEGSOC_D;User ID=k000010;Password=24aMrDE5;Server=db2connectdesa:50000;CurrentSchema=${SchemaDB2};Persist Security Info=True"
+			 providerName="IBM.Data.DB2" />
+	</connectionStrings>
+
+	<system.serviceModel>
+		<bindings>
+			<webHttpBinding>
+				<binding name="LargeWeb"
+						 maxBufferSize="2147483647"
+						 maxReceivedMessageSize="2147483647" />
+			</webHttpBinding>
+		</bindings>
+	</system.serviceModel>
+
+	<system.web>
+		<!-- Configuración para WebServices ASMX -->
+		<webServices>
+			<protocols>
+				<add name="HttpSoap" />
+			</protocols>
+		</webServices>
+
+		<compilation debug="true" targetFramework="4.7.2" />
+		<httpRuntime targetFramework="4.7.2" />
+	</system.web>
+
+	<startup>
+		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
+	</startup>
+
+	<runtime>
+		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+			<dependentAssembly>
+				<assemblyIdentity name="IBM.Data.DB2" publicKeyToken="7C307B91AA13D208" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-9.7.4.4" newVersion="9.7.4.4" />
+			</dependentAssembly>
+			<dependentAssembly>
+				<assemblyIdentity name="Microsoft.Web.Infrastructure" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-2.0.1.0" newVersion="2.0.1.0" />
+			</dependentAssembly>
+		</assemblyBinding>
+	</runtime>
+
+	<system.codedom>
+		<compilers>
+			<compiler extension=".cs" language="c#;cs;csharp"
+					  warningLevel="4"
+					  compilerOptions="/langversion:7.3 /nowarn:1659;1699;1701;612;618"
+					  type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, 
+                      Microsoft.CodeDom.Providers.DotNetCompilerPlatform, 
+                      Version=3.6.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
+		</compilers>
+	</system.codedom>
 </configuration>
